# RScaLAPACK

./: COPYRIGHT  INDEX  README  configure  configure.in
R/: HLRscalapack.R  ParallelAgent.R  Rscalapack.R  StartUpLam.R.in  StartUpMpich2.R.in  StartUpOmpi.R.in  zzz.R.in
demo/: 00Index  README.txt  RScaLAPACK.R  RpdgemmDemo.R  RpdgeqrDemo.R  RpdgesvDemo.R  RpdgesvdDemo.R  RpdpotrfDemo.R  RpdpotriDemo.R  RpdsyevdDemo.R
exec/: CRDriver  dfCRDriver.sh  pdgesv.R
html/: documentation.html  download.html  index.html  installation.html
man/: Rfactanal.Rd  RgridExit.Rd  RgridInfo.Rd  RgridInit.Rd  Rpdgemm.Rd  Rpdgeqrf.Rd  Rpdgesv.Rd  Rpdgesvd.Rd  Rpdpotrf.Rd  Rpdpotri.Rd  Rpdsyevd.Rd  Rpprcomp.Rd  Rprincomp.Rd  Rquit.Rd  Rvarimax.Rd  other.Rd
src/: CRDriver.c  CRcollectData.f  CRdistData.f  CRscalapack.c  CRscalapack.h  Makefile  Makefile.in  Makevars  Makevars.in  PAcollectData.f  PAdistData.c  PAdistData.f  ParallelAgent.c  ParallelAgent.h  callpdgemm.f  callpdgeqrf.f  callpdgesv.f  callpdgesvd.f  callpdpotrf.f  callpdpotri.f  callpdsyevd.f  conversion.c
