dnl/*======================================================================
dnl *           R-ScaLAPACK version 0.4.x:  ScaLAPACK interface to R
dnl *              Oak Ridge National Laboratory, Oak Ridge TN.
dnl *        Authors: David Bauer, Guruprasad Kora, Nagiza. F. Samatova, 
dnl *                            Srikanth Yoginath.
dnl *     Contact: Nagiza F. Samatova; (865) 241-4351; samatovan@ornl.gov
dnl *     Contact: Guruprasad Kora; (865) 576-6210; koragh@ornl.gov
dnl *                 Computer Science and Mathematics Division
dnl *             Oak Ridge National Laboratory, Oak Ridge TN 37831 
dnl *                   (C) 2004 All Rights Reserved
dnl *
dnl *                              NOTICE
dnl *
dnl * Permission to use, copy, modify, and distribute this software and
dnl * its documentation for any purpose and without fee is hereby granted
dnl * provided that the above copyright notice appear in all copies and
dnl * that both the copyright notice and this permission notice appear in
dnl * supporting documentation.
dnl *
dnl * Neither the Oak Ridge National Laboratory nor the Authors make any
dnl * representations about the suitability of this software for any
dnl * purpose.  This software is provided ``as is'' without express or
dnl * implied warranty.
dnl *
dnl * RScaLAPACK (http://www.aspect-sdm.org/Parallel-R) was funded
dnl * as part of the Scientific Data Management Center
dnl * (http://sdm.lbl.gov/sdmcenter) under the Department of Energy's 
dnl * Scientific Discovery through Advanced Computing (DOE SciDAC) program
dnl * (http://www.scidac.org ). 
dnl=========================================================================*/
dnl Process this file with autoconf to produce a configure script.

AC_INIT(DESCRIPTION)

dnl AC_CONFIG_SRCDIR([src/CRDriver.c])
: ${R_HOME=`R RHOME`}
if test -z "${R_HOME}"; then
   echo "could not determine R_HOME"
   exit 1
fi

CC=`"${R_HOME}/bin/R" CMD config CC`
F77=`"${R_HOME}/bin/R" CMD config F77`
RCFLAGS=`"${R_HOME}/bin/R" CMD config CFLAGS`
CFLAGS="${RCFLAGS} ${CFLAGS}"

dnl Checks for programs
supply_mpi=no
supply_blacs=no
supply_blas=no
supply_lapack=no
supply_scalapack=no
MPI_LAM=no
MPI_MPICH=no
OMPI=no
ATLAS_BLAS=yes

AC_ARG_WITH(mpi,
[  --with-mpi=/usr/local	     Location of MPI_HOME],
[MPI_HOME=${withval}
 supply_mpi=yes
 AC_MSG_NOTICE(MPI_HOME=${MPI_HOME} .. is set)
])

AC_ARG_WITH(blacs,
[  --with-blacs=/usr/local/lib	     Location of BLACS libraries],
[BLACS_LIB=${withval}
 supply_blacs=yes
 AC_MSG_NOTICE(BLACS_LIB=${BLACS_LIB} .. is set)
])


AC_ARG_WITH(blas,
[  --with-blas=/usr/local/lib	     Location of BLAS libraries],
[BLAS_LIB=${withval}
 supply_blas=yes
 AC_MSG_NOTICE(BLAS_LIB=${BLAS_LIB} .. is set)
])

AC_ARG_WITH(lapack,
[  --with-lapack=/usr/local/lib	     Location of LAPACK libraries],
[LAPACK_LIB=${withval}
 supply_lapack=yes
 AC_MSG_NOTICE(LAPACK_LIB=${LAPACK_LIB} .. is set)
])


AC_ARG_WITH(scalapack,
[  --with-scalapack=/usr/local/lib	 Location of SCALAPACK library],
[SCALAPACK_LIB=${withval}
 supply_scalapack=yes
 AC_MSG_NOTICE(SCALAPACK_LIB=${SCALAPACK_LIB} .. is set)
])

dnl Checks for libraries

AC_LANG(C)
dnl AC_CHECK_LIB(g2c,c_sqrt,LIBG2C="-lg2c",LIBG2C="")
#AC_CHECK_LIB(g2c, main)

if test "${supply_mpi}" = yes; then
	LDFLAGS="-L${MPI_HOME}/lib ${LDFLAGS}"
fi

if test "${supply_blas}" = yes; then
	LDFLAGS="-L${BLAS_LIB} ${LDFLAGS}"
fi

if test "${supply_lapack}" = yes; then
	LDFLAGS="-L${LAPACK_LIB} ${LDFLAGS}"
fi


if test "${supply_blacs}" = yes; then
	LDFLAGS="-L${BLACS_LIB} ${LDFLAGS}"
fi

if test "${supply_scalapack}" = yes; then
	LDFLAGS="-L${SCALAPACK_LIB} ${LDFLAGS}"
fi

AC_CHECK_LIB(pthread, pthread_atfork,[
	PALIBS="-lpthread"
	],[
	echo "pThread Not found"])


if test "${supply_lapack}" = yes; then


	if test -f ${LAPACK_LIB}/liblapack.a; then
		LIBS="-llapack ${LIBS}"
	elif test -f ${SCALAPACK_LIB}/libreflapack.a; then
		LIBS="${SCALAPACK_LIB}/libreflapack.a  ${LIBS}"
	else
		AC_MSG_NOTICE(liblapack.a not found)
		LAPACK_LIB=no
	fi

fi


if test "${supply_blas}" = yes || test "${supply_scalapack}" = yes; then


	if test -f ${BLAS_LIB}/libatlas.a; then
		LIBS="-latlas ${LIBS}"
	elif test -f ${SCALAPACK_LIB}/libatlas.a; then
		LIBS="-latlas ${LIBS}"
	else
		AC_MSG_NOTICE(libatlas.a not found)
		ATLAS_BLAS=no
	fi

	if test "${ATLAS_BLAS}" = yes; then	
		if test -f ${BLAS_LIB}/libf77blas.a; then
			LIBS="-lf77blas ${LIBS}"

		elif test -f ${SCALAPACK_LIB}/libf77blas.a; then
			LIBS="-lf77blas ${LIBS}"

		else
			AC_MSG_ERROR(libf77blas.a not found,-1)
		fi
	else
		if test -f ${BLAS_LIB}/libblas.a; then
			LIBS="-lblas ${LIBS}"
	
		elif test -f ${SCALAPACK_LIB}/libblas.a; then
			LIBS="-lblas ${LIBS}"

		elif test -f ${BLAS_LIB}/librefblas.a; then
			LIBS="-lrefblas ${LIBS}"

		else
			AC_MSG_ERROR(libblas.a not found,-1)
		fi
	fi

else
	AC_CHECK_LIB(atlas, ATL_ztrsm,[ 
		LIBS="-latlas ${LIBS}"],
		[AC_MSG_NOTICE(libatlas.a not found)
		ATLAS_BLAS=no])
		 
	if test "${ATLAS_BLAS}" = yes; then	
		AC_LANG_PUSH(Fortran 77)
		AC_CHECK_LIB(f77blas, ztrsm,[
			LIBS="-lf77blas ${LIBS}"], [
			AC_MSG_ERROR(libf77blas.a not found,-1)
		])
		AC_LANG_POP(Fortran 77)
	else
		AC_LANG_PUSH(Fortran 77)
		AC_CHECK_LIB(blas, ztrsm,[
			LIBS="-lf77blas ${LIBS}"], [
			AC_MSG_ERROR(libf77blas.a not found,-1)
		])
		AC_LANG_POP(Fortran 77)
	fi
fi

if test "${supply_blacs}" = yes || test "${supply_scalapack}" = yes; then

	if test -f ${BLACS_LIB}/libblacs.a; then
		LIBS="-lblacs ${LIBS}"

	elif test -f ${SCALAPACK_LIB}/libblacs.a;  then
		LIBS="-lblacs ${LIBS}"

	elif test -f ${BLACS_LIB}/libblacs.a;  then
		LIBS="${BLACS_LIB}/blacs.a ${LIBS}"

	elif test -f ${SCALAPACK_LIB}/blacs.a;  then
		LIBS="${SCALAPACK_LIB}/blacs.a ${LIBS}"

	else
		AC_MSG_ERROR(libblacs.a not found,-1)
	fi

	if test -f ${BLACS_LIB}/libblacsCinit.a; then
		LIBS="-lblacsCinit ${LIBS}"

	elif test -f ${SCALAPACK_LIB}/libblacsCinit.a;  then
		LIBS="-lblacsCinit ${LIBS}"

	elif test -f ${BLACS_LIB}/libblacsC.a;  then
		LIBS="${BLACS_LIB}/blacsC.a ${LIBS}"

	elif test -f ${SCALAPACK_LIB}/blacsC.a;  then
		LIBS="${SCALAPACK_LIB}/blacsC.a ${LIBS}"

	else
		AC_MSG_ERROR(libblacsCinit.a not found,-1)
	fi

	if test -f ${BLACS_LIB}/libblacsF77init.a; then
		LIBS="-lblacsF77init ${LIBS}"

	elif test -f ${SCALAPACK_LIB}/libblacsF77init.a;  then
		LIBS="-lblacsF77init ${LIBS}"

	elif test -f ${BLACS_LIB}/libblacs77F.a;  then
		LIBS="${BLACS_LIB}/blacsF77.a ${LIBS}"

	elif test -f ${SCALAPACK_LIB}/blacsF77.a;  then
		LIBS="${SCALAPACK_LIB}/blacsF77.a ${LIBS}"

	else
		AC_MSG_ERROR(libcblacsF77init.a not found,-1)
	fi
else
	AC_CHECK_LIB(blacs, Cblacs_gridexit,[], [
		AC_MSG_ERROR(libblacs.a not found,-1)
		])

	AC_CHECK_LIB(blacsCinit, Cblacs_pinfo,[],[
		AC_MSG_ERROR(libblacsCinit.a not found,-1)
		])
	
	AC_CHECK_LIB(blacsF77init, blacs_pinfo__,[],[
		AC_MSG_ERROR(libblacsF77init.a not found,-1)
		])

fi


if test "${supply_scalapack}" = yes; then

	if test -f ${SCALAPACK_LIB}/libscalapack.a; then
		LIBS="-lscalapack ${LIBS}"
	else
		AC_MSG_ERROR(libscalapack.a not found,-1)
	fi

else
	AC_LANG_PUSH(Fortran 77)
	AC_CHECK_LIB(scalapack, pdgesv, [],[
		AC_MSG_ERROR(libscalapack.a not found,-1)
		])
	AC_LANG_POP(Fortran 77)
fi


AC_ARG_WITH(mpi,
[   --with-mpi=/opt/lib32/usr/lib          Location of MPI library.],
[   if test "${withval}" != no; then
        MPI_ROOT=${withval}
        MPI_INCLUDE="-I${MPI_ROOT}/include"
        LDFLAGS="$LDFLAGS -L${withval}/lib"
        CFLAGS="$CFLAGS -I${withval}/include"
    fi  ]
)

dnl if test "$MPI_ROOT"==""; then
dnl   for d in /opt/lib /usr /usr/lib /usr/lib64 /usr/local/lib /usr/local; do
dnl     if test -f $d/lam/include/mpi.h && test -f $d/lam/lib/libmpi.so; then
dnl       echo "I am here $d/lam"
dnl       MPI_ROOT=$d/lam
dnl       break
dnl     elif test -f $d/mpi/include/mpi.h; then
dnl       echo "I am here $d/mpi"
dnl       MPI_ROOT=$d/mpi
dnl       break
dnl     elif test -f $d/mpich/include/mpi.h; then
dnl       echo "I am here $d/mpich"
dnl       MPI_ROOT=$d/mpich
dnl       break
dnl     elif test -f $d/include/mpi.h; then
dnl       echo "I am here $d"
dnl       MPI_ROOT=$d
dnl       break
dnl     fi
dnl   done
dnl fi

if test -n "$MPI_ROOT"; then
    echo "Try to find mpi.h ..."
    if test -f ${MPI_ROOT}/include/mpi.h; then
         echo "Found in ${MPI_ROOT}/include"
         MPI_INCLUDE="-I${MPI_ROOT}/include"
    elif test -f /usr/include/lam/mpi.h; then
         echo "Found in /usr/include/lam"
         MPI_INCLUDE="-I/usr/include/lam"
    elif test -f /usr/local/include/mpi.h; then
         echo "Found in /usr/local/include"
         MPI_INCLUDE="-I/usr/local/include"
    else 
         echo "Cannot find mpi head file"
         echo "Please use --with-mpi=/path/to/mpi or specify the environment variable MPI_ROOT"
         exit 1
    fi
else
    AC_CHECK_HEADER(mpi.h)
fi 

echo "Try to find libmpi or libmpich ..."
if test -f ${MPI_ROOT}/lib/libmpi.so; then
        echo "Found libmpi in ${MPI_ROOT}/lib"
		OMPI=yes;	
        MPI_LIBS="-L${MPI_ROOT}/lib -lmpi -lmpi_f77"
	if test -d  ${MPI_ROOT}/lib/openmpi; then
        	echo "Found openmpi dir in ${MPI_ROOT}/lib"
		MPI_DEPS="-DOMPI"
	fi
elif test -f ${MPI_ROOT}/lib64/lam/libmpi.so; then
        echo "Found libmpi in ${MPI_ROOT}/lib64/lam"
		MPI_LAM=yes;
        MPI_LIBS="-L${MPI_ROOT}/lib64/lam -lmpi"
		MPI_DEPS="-DLAMMPI"
elif test -f ${MPI_ROOT}/lib/libmpich.a; then
        echo "Found libmpich in ${MPI_ROOT}/lib"
		MPI_MPICH=yes;
        MPI_LIBS="${MPI_ROOT}/lib/libmpich.a"
		MPI_DEPS="-DMPICH"
else
    AC_CHECK_LIB(mpi, main,
    	[   MPI_LIBS="-L${MPI_ROOT}/lib -lmpi"  ],
    	[   echo "libmpi not found. exiting..."
        	exit 1  ]
)
fi    

echo "Try to find liblam ..."
if test -f ${MPI_ROOT}/lib/liblam.a; then
        echo "Found liblam in ${MPI_ROOT}/lib"
        MPI_LIBS="${MPI_LIBS} -llam"
		MPI_DEPS="-DLAMMPI"
elif test -f ${MPI_ROOT}/lib64/lam/liblam.so; then
        echo "Found liblam in ${MPI_ROOT}/lib64/lam"
        MPI_LIBS="${MPI_LIBS} -llam"
		MPI_DEPS="-DLAMMPI"
else
    AC_CHECK_LIB(lam, main,
    	[   MPI_LIBS="$MPI_LIBS -llam" 
	    MPI_DEPS="-DLAMMPI" ],
    	[   echo "liblam not found. Probably not LAM-MPI"]
    )
fi    

#AC_CHECK_LIB(util, openpty, [ MPI_LIBS="$MPI_LIBS -lutil" ])
AC_CHECK_LIB(pthread, main, [ MPI_LIBS="$MPI_LIBS -lpthread" ])


PKG_LIBS="${MPI_LIBS}"
PKG_CPPFLAGS="${MPI_INCLUDE} ${MPI_DEPS} -fPIC"


AC_SUBST(PKG_LIBS)
AC_SUBST(PKG_CPPFLAGS)
AC_SUBST(DEFS)

CFLAGS="${PKG_CPPFLAGS} ${CFLAGS}"
LIBS="${PKG_LIBS} ${LIBS}"
PALIBS="${PKG_LIBS} ${LIBS}"


CC=`${R_HOME}/bin/R CMD config CC`;
CXX=`${R_HOME}/bin/R CMD config CXX`;
RINC=`${R_HOME}/bin/R CMD config --cppflags`

echo "Configured Parameters ..."
echo "LIBS = ${LIBS}"
echo "LDFLAGS = ${LDFLAGS}"
echo "CFLAGS = ${CFLAGS} ${RINC}"
echo "PALIBS = ${PALIBS}"
echo "...  *** ..."
AC_SUBST(LIBS)
AC_SUBST(PALIBS)
AC_SUBST(CFLAGS)

AC_SUBST(PALIBS)
AC_OUTPUT(src/Makefile)

if test "${MPI_MPICH}" = yes; then
	AC_OUTPUT(R/StartUpMpich2.R)
fi

if test "${MPI_LAM}" = yes; then
	AC_OUTPUT(R/StartUpLam.R)
fi

if test "${OMPI}" = yes; then
	AC_OUTPUT(R/StartUpOmpi.R)
fi
